[project]
name = "ArisuMaidQQBot"
version = "0.1.0"
description = "ArisuMaidQQBot"
readme = "README.md"
requires-python = ">=3.9, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V12", module_name = "nonebot.adapters.onebot.v12" },
    { name = "Console", module_name = "nonebot.adapters.console" },
    { name = "Minecraft", module_name = "nonebot.adapters.minecraft" }
]
plugins = []
plugin_dirs = ["src/plugins"]
builtin_plugins = ["echo", "single_session"]
