[project]
name = "ArisuMaidQQBot"
version = "0.1.0"
description = "ArisuMaidQQBot"
readme = "README.md"
requires-python = ">=3.9, <4.0"

[tool.nonebot]
adapters = [
    { name = "Minecraft", module_name = "nonebot.adapters.minecraft" },
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["nonebot_plugin_apscheduler"]
plugin_dirs = ["src/plugins"]
